add anchors add todo

--- a/docs/de-de/modules/automatisierung/pages/arbeitsschritte.adoc
+++ b/docs/de-de/modules/automatisierung/pages/arbeitsschritte.adoc
@@ -25,7 +25,8 @@ Klicke auf *Hinzufügen* und nimm die Einstellungen wie auf den Unterseiten besc
 
 Bestimmt, welche und wie viele Aufträge den Prozess durchlaufen sollen. Filter ermöglichen es dir, die automatische Bearbeitung auf bestimmte Aufträge zu beschränken. Außerdem wird festgelegt, ob durch den Arbeitsschritt Änderungen an den Aufträgen vorgenommen werden. Du kannst den Status, den Eigner und/oder die Markierung von Aufträgen ändern, die diesen Arbeitsschritt durchlaufen haben. Auch die Reihenfolge, in der Aufträge abgearbeitet werden, legst du fest.
 
-=== Einstellung
+[#auftragsabwicklung-erstellung]
+=== Erstellung
 
 Erstelle zunächst einen Arbeitsschritt.
 
@@ -39,6 +40,7 @@ Arbeitsschritt erstellen:
 
 Bei einem bereits erstellten Arbeitsschritt klickst du auf *Bearbeiten*, um dieses Fenster zu öffnen.
 
+[#auftragsabwicklung-einstellungen]
 ==== Einstellungen
 
 In diesem Bereich werden allgemeine Einstellungen für den Arbeitsschritt vorgenommen, zum Beispiel die Bezeichnung und die Positionierung innerhalb des Prozesses.
@@ -68,10 +70,10 @@ Bei mehreren Arbeitsschritten kann hier die Reihenfolge geändert werden. Standa
 *_Tipp:_* Arbeitsschritte lassen sich auch über das Kontextmenü um eine Position verschieben. Klicke dazu mit der rechten Maustaste auf den Arbeitsschritt und wähle *Nach oben verschieben* oder *Nach unten verschieben*.
 |====
 
-
+[#auftragsabwicklung-filter]
 ==== Filter
 
-Die Filter verwendest du, um nur bestimmte Aufträge mit dem Arbeitsschritt *Auftragsabwicklung* zu bearbeiten.
+Mit Filtern bestimmst du genau, welche Aufträge mit dem Arbeitsschritt *Auftragsabwicklung* bearbeitet werden.
 
 <<table-work-step-filter>> erläutert die für diesen Arbeitsschritt verfügbaren Filter.
 
@@ -216,6 +218,7 @@ Füge zuerst den Filter *Auftragslager* hinzu und wähle ein Lager aus der Dropd
 *vorhanden* = Nur Aufträge von Kontakten werden verarbeitet, die das SEPA-Lastschriftmandat nicht bestätigt und unterschrieben haben.
 |====
 
+[#auftragsabwicklung-markierung]
 === Aufträge markieren
 
 Damit du die Aufträge, die den Prozess durchlaufen haben, erkennst, weist du diesen Aufträgen in diesem Bereich eine Markierung oder einen anderen Status zu. Es ist hier auch möglich, den Benutzer zu ändern, wenn die Aufträge zum Beispiel nach Durchlauf des Prozesses einer anderen Abteilung zugeordnet werden sollen.
@@ -238,6 +241,7 @@ Damit du die Aufträge, die den Prozess durchlaufen haben, erkennst, weist du di
 |Wähle die gewünschte Markierung aus der Dropdown-Liste, wenn durch diesen Arbeitsschritt die Markierung der Aufträge geändert werden soll.
 |====
 
+[#auftragsabwicklung-sortierung]
 === Sortierung
 
 Die Sortierung bestimmt die Reihenfolge der Aufträge.
@@ -267,6 +271,7 @@ Die Sortierung bestimmt die Reihenfolge der Aufträge.
 Für die Sortierung wird nur die erste Position eines Auftrags berücksichtigt.
 ====
 
+[#auftragsabwicklung-verzeichnis]
 === Übersicht der Aktionen und Subaktionen
 
 Nachdem du alle Einstellungen vorgenommen hast, fügst du dem Arbeitsschritt *Aktionen* und *Subaktionen* hinzu.
@@ -444,7 +449,8 @@ Folgende xref:automatisierung:aktionen.adoc#[Aktionen] und xref:automatisierung:
 
 Mit einem Arbeitsschritt des Typs *Auftragsbearbeitung* kannst du festlegen, wie einzelne Aufträge weiter bearbeitet werden sollen, nachdem diese zum Beispiel mittels eines Handscanners erfasst wurden. Es handelt sich um einen sehr flexiblen Arbeitsschritt, den du durch die Verwendung der entsprechenden Aktionen und Subaktionen nach deinen Wünschen konfigurierst.
 
-=== Einstellung
+[#auftragsbearbeitung-erstellung]
+=== Erstellung
 
 Erstelle zunächst einen Arbeitsschritt.
 
@@ -456,6 +462,9 @@ Arbeitsschritt erstellen:
 → Das Einstellungsfenster wird geöffnet.
 
 Bei einem bereits erstellten Arbeitsschritt klickst du auf den *Bearbeiten*, um dieses Fenster zu öffnen.
+
+[#auftragsbearbeitung-einstellungen]
+==== Einstellungen
 
 <<table-work-step-single-settings>> erläutert die Einstellungen des Arbeitsschrittes.
 
@@ -488,6 +497,12 @@ Der betreffende Arbeitsschritt wird angezeigt. Wenn du dann mit der Maus auf das
 Mit dem *grünen Plus* fügst du eine *Aktion* oder eine *Subaktion* hinzu, indem du das gewünschte Element aus der Dropdown-Liste wählst.
 ====
 
+[#auftragsbearbeitung-filter]
+==== Filter
+
+//TODO
+
+[#auftragsbearbeitung-verzeichnis]
 === Übersicht der Aktionen und Subaktionen
 
 Folgende xref:automatisierung:aktionen.adoc#[Aktionen] und xref:automatisierung:subaktionen.adoc#[Subaktionen] stehen dir für den Arbeitsschritt *Auftragsbearbeitung* zur Verfügung. Informationen zu den Einstellungen erhältst du auf der jeweiligen Unterseite.
