--- a/docs/de-de/modules/automatisierung/pages/arbeitsschritte.adoc
+++ b/docs/de-de/modules/automatisierung/pages/arbeitsschritte.adoc
@@ -3,15 +3,20 @@
 :id: 93G3IG4
 :author: team-docs-automation
 
-Dieses Kapitel beschreibt die Arbeitsschritte, die du für Prozesse einrichten kannst. Für einen Prozess kannst du beliebige Arbeitsschritte erstellen. Je nach Typ des Arbeitsschrittes stehen mehr oder weniger detaillierte Einstellungsmöglichkeiten zur Verfügung. Diese bestehen in erster Linie aus Aktionen und Subaktionen, die hintereinander geschaltet werden und als Prozess endlos oder manuell gesteuert ablaufen. Dabei sind Bedingungen einstellbar, die als Filter wirken und für die Arbeitsschritte sehr individuelle Einstellungen ermöglichen.
+Dieses Kapitel beschreibt die Arbeitsschritte, die du für Prozesse einrichten kannst. Für einen Prozess kannst du beliebig viele Arbeitsschritte erstellen. 
 
-Lerne Arbeitsschritte spielerisch kennen:
+Je nach Typ des Arbeitsschrittes stehen mehr oder weniger detaillierte Einstellungsmöglichkeiten zur Verfügung. Diese bestehen in erster Linie aus Aktionen und Subaktionen, die hintereinander geschaltet werden und als Prozess endlos oder manuell gesteuert ablaufen. Dabei sind auch Filter auswählbar, die für Arbeitsschritte sehr individuelle Einstellungen ermöglichen.
 
-.Arbeitsschritte
+Schau dir das folgende Video an, um mehr über Arbeitsschritte zu erfahren.
+
+[.collapseBox]
+.*Video-Tutorial*
+--
 video::223728357[vimeo]
+--
 
 [IMPORTANT]
-.Tool plentyBase erforderlich
+.plentyBase erforderlich
 ====
 Um Prozesse zu erstellen und auszuführen benötigst du das Tool xref:automatisierung:plentybase-installieren.adoc#[plentyBase]. Die Installationsdateien für plentyBase findest du im link:https://marketplace.plentymarkets.com/plugins/externe-tools/plentyBase_5053/[plentyMarketplace^].
 ====
@@ -23,7 +28,7 @@ Klicke auf *Hinzufügen* und nimm die Einstellungen wie auf den Unterseiten besc
 [#auftragsabwicklung]
 == Auftragsabwicklung
 
-Bestimmt, welche und wie viele Aufträge den Prozess durchlaufen sollen. Filter ermöglichen es dir, die automatische Bearbeitung auf bestimmte Aufträge zu beschränken. Außerdem wird festgelegt, ob durch den Arbeitsschritt Änderungen an den Aufträgen vorgenommen werden. Du kannst den Status, den Eigner und/oder die Markierung von Aufträgen ändern, die diesen Arbeitsschritt durchlaufen haben. Auch die Reihenfolge, in der Aufträge abgearbeitet werden, legst du fest.
+Der Arbeitsschritt *Auftragsabwicklung* bestimmt, welche und wie viele Aufträge den Prozess durchlaufen sollen. Filter ermöglichen es dir, die automatische Bearbeitung auf bestimmte Aufträge zu beschränken. Außerdem wird festgelegt, ob durch den Arbeitsschritt Änderungen an den Aufträgen vorgenommen werden. Du kannst den Status, den Eigner und/oder die Markierung von Aufträgen ändern, die diesen Arbeitsschritt durchlaufen haben. Auch die Reihenfolge, in der Aufträge abgearbeitet werden, legst du fest.
 
 [#auftragsabwicklung-erstellung]
 === Erstellung
@@ -65,7 +70,7 @@ In diesem Bereich werden allgemeine Einstellungen für den Arbeitsschritt vorgen
 *Automatisch starten* = Ein Folgeschritt oder eine Aktion wird automatisch gestartet.
 
 | *Position*
-|Option wird erst wählbar, nachdem der Arbeitsschritt erstellt wurde. +
+|Diese Option wird erst wählbar, nachdem der Arbeitsschritt erstellt wurde. +
 Bei mehreren Arbeitsschritten kann hier die Reihenfolge geändert werden. Standardmäßig wird neuen Arbeitsschritten die nächste verfügbare Position zugewiesen. Wähle eine andere Position, um bei mehreren Arbeitsschritten die Reihenfolge zu ändern, in der die Arbeitsschritte abgearbeitet werden. Arbeitsschritte werden aufsteigend sortiert. Der Arbeitsschritt mit der niedrigsten Nummer wird also zuerst ausgeführt. +
 *_Tipp:_* Arbeitsschritte lassen sich auch über das Kontextmenü um eine Position verschieben. Klicke dazu mit der rechten Maustaste auf den Arbeitsschritt und wähle *Nach oben verschieben* oder *Nach unten verschieben*.
 |====
@@ -73,17 +78,17 @@ Bei mehreren Arbeitsschritten kann hier die Reihenfolge geändert werden. Standa
 [#auftragsabwicklung-filter]
 ==== Filter
 
-Mit Filtern bestimmst du genau, welche Aufträge mit dem Arbeitsschritt *Auftragsabwicklung* bearbeitet werden.
+Mit Filtern grenzt du genau ein, welche Aufträge mit dem Arbeitsschritt *Auftragsabwicklung* bearbeitet werden.
 
 <<table-work-step-filter>> erläutert die für diesen Arbeitsschritt verfügbaren Filter.
 
 [[table-work-step-filter]]
-.Übersicht der Filter: Erläuterung der Einstellungen
+.Übersicht der Filter für den Arbeitsschritt *Auftragsabwicklung*
 [cols="1,3"]
 |====
 |Filter |Erläuterung
 
-2+^|Auftragsdaten
+2+^|Bereich *Auftragsdaten*
 
 | *Angefangene Box-Kommissionierung*
 | *Fortsetzen* = Mit dieser Einstellung wird die letzte Box-Kommissionierung beim nächsten Start des Prozesses fortgesetzt. +
@@ -196,7 +201,7 @@ Füge zuerst den Filter *Auftragslager* hinzu und wähle ein Lager aus der Dropd
 | *Zahlungsart*
 |Wähle eine oder mehrere Zahlungsarten, um nur Aufträge mit diesen Zahlungsarten zu filtern.
 
-2+^|SEPA
+2+^|Bereich *SEPA*
 
 | *Art der Lastschrift*
 |Wähle, ob Aufträge mit *Erstlastschrift* oder mit *Folgelastschrift* gefiltert werden sollen.
@@ -248,6 +253,12 @@ Die Sortierung bestimmt die Reihenfolge der Aufträge.
 
 <<table-work-step-sorting>> erläutert die Sortierung des Arbeitsschrittes *Auftragsabwicklung*.
 
+[IMPORTANT]
+.Sortierung
+====
+Für die Sortierung wird nur die erste Position eines Auftrags berücksichtigt.
+====
+
 [[table-work-step-sorting]]
 .Arbeitsschritt einrichten: Sortierung
 [cols="1,3"]
@@ -261,15 +272,8 @@ Die Sortierung bestimmt die Reihenfolge der Aufträge.
 *Kunden-ID* +
 *Rechnungsnummer* +
 *Artikelnummer* +
-*Position Lagerort* +
-*_Hinweis:_* Bei der Sortierung wird nur die erste Auftragsposition berücksichtigt.
+*Position Lagerort*
 |====
-
-[TIP]
-.Sortierung
-====
-Für die Sortierung wird nur die erste Position eines Auftrags berücksichtigt.
-====
 
 [#auftragsabwicklung-verzeichnis]
 === Übersicht der Aktionen und Subaktionen
@@ -500,7 +504,38 @@ Mit dem *grünen Plus* fügst du eine *Aktion* oder eine *Subaktion* hinzu, inde
 [#auftragsbearbeitung-filter]
 ==== Filter
 
-//TODO
+Mit Filtern bestimmst du genau, welche Aufträge mit dem Arbeitsschritt *Auftragsbearbeitung* bearbeitet werden.
+
+Für den Arbeitsschritt *Auftragsbearbeitung* sind die gleichen Filter verfügbar, die in <<table-work-step-filter>> beschrieben sind. 
+
+Weitere Filter, die du in Verbindung mit dem Arbeitsschritt *Auftragsbearbeitung* nutzen kannst, werden in <<table-additional-filters>> beschrieben.
+
+[[table-additional-filters]]
+.Zusätzliche Filter für den Arbeitsschritt *Auftragsbearbeitung*
+[cols="1,3"]
+|====
+|Filter |Erläuterung
+
+2+^| Bereich *Artikelerfassung*
+
+| *Fortschritt*
+| //TODO
+
+| *Auftrag*
+| //TODO
+
+2+^|Bereich *Auftragspositionen*
+
+| *Anzahl Auftragspositionen*
+| //TODO
+
+| *Gesamt-Artikelmenge*
+| //TODO
+
+| *Seriennummer*
+| //TODO
+
+|====
 
 [#auftragsbearbeitung-verzeichnis]
 === Übersicht der Aktionen und Subaktionen
