change wording / add info

--- a/docs/de-de/modules/automatisierung/pages/arbeitsschritte.adoc
+++ b/docs/de-de/modules/automatisierung/pages/arbeitsschritte.adoc
@@ -479,7 +479,7 @@ Bei einem bereits erstellten Arbeitsschritt klickst du auf den *Bearbeiten*, um 
 |Einstellung |Erläuterung
 
 | *Name*
-|Name für den Arbeitsschritt. Wähle einen Namen, der den Arbeitsschritt möglichst eindeutig bezeichnet.
+|Wähle einen Namen, der den Arbeitsschritt möglichst eindeutig bezeichnet.
 
 | *Folgeschritt*
 |Wähle, ob ein weiterer Arbeitsschritt manuell oder automatisch gestartet werden soll. Diese Einstellung ist nur relevant, wenn mindestens zwei Arbeitsschritte eingerichtet sind. +
@@ -519,21 +519,24 @@ Weitere Filter, die du in Verbindung mit dem Arbeitsschritt *Auftragsbearbeitung
 2+^| Bereich *Artikelerfassung*
 
 | *Fortschritt*
-| //TODO
+|Wähle die Option *Vollständig erfasst*, um nach Aufträgen zu filtern, deren Artikel vollständig vom Lagerpersonal im Packprozess erfasst wurden.
 
 | *Auftrag*
-| //TODO
+|Wähle die Option *In Bearbeitung*, um nach Aufträgen zu filtern, bei denen die Artikelerfassung begonnen wurde. Mit der Option *Zuletzt gescannt* wird nach dem Auftrag gefiltert, für den zuletzt ein Artikel erfasst wurde.
 
 2+^|Bereich *Auftragspositionen*
 
 | *Anzahl Auftragspositionen*
-| //TODO
+|Wähle einen Operator aus gib einen Wert im Textfeld ein, um nach der Gesamtanzahl der Auftragspositionen pro Auftrag zu filtern. +
+*Beispiel:* Zum Filtern von Aufträgen mit weniger als 10 Auftragspositionen *10* in das Textfeld eingeben und den Operator *<* wählen. 
 
 | *Gesamt-Artikelmenge*
-| //TODO
+|Wähle einen Operator aus gib einen Wert im Textfeld ein, um nach der Gesamtanzahl der Artikel pro Auftrag zu filtern.
 
 | *Seriennummer*
-| //TODO
+|Wähle, ob Auftragspositionen danach gefiltert werden sollen, ob am Artikel eine xref:artikel:seriennummern.adoc#[Seriennummer] hinterlegt ist. +
+*Ja* = Es wird nach Auftragspositionen mit Seriennummer gefiltert +
+*Nein* = Es wird nach Auftragspositionen ohne Seriennummern gefiltert *
 
 |====
 
@@ -736,7 +739,7 @@ Arbeitsschritt erstellen:
 
 Bei einem bereits erstellten Arbeitsschritt klickst du auf *Bearbeiten*, um dieses Fenster zu öffnen.
 
-<<table-work-step-incoming-settings>> erläutert die Einstellungen des Arbeitsschrittes.
+<<table-work-step-incoming-settings>> erläutert die Einstellungen des Arbeitsschrittes *Wareneingang*.
 
 [[table-work-step-incoming-settings]]
 .Arbeitsschritt einrichten: Einstellungen
@@ -750,7 +753,7 @@ Bei mehreren Arbeitsschritten kann hier die Reihenfolge geändert werden. Standa
 *_Tipp:_* Arbeitsschritte lassen sich auch über das Kontextmenü um eine Position verschieben. Klicke dazu mit der rechten Maustaste auf den Arbeitsschritt und wähle *Nach oben verschieben* oder *Nach unten verschieben*.
 
 | *Name*
-|Name für den Arbeitsschritt. Wähle einen Namen, der den Arbeitsschritt möglichst eindeutig bezeichnet.
+|Wähle einen Namen, der den Arbeitsschritt möglichst eindeutig bezeichnet.
 
 | *Folgeschritt*
 |Wähle, ob ein weiterer Arbeitsschritt manuell oder automatisch gestartet werden soll. Diese Einstellung ist nur relevant, wenn mindestens zwei Arbeitsschritte eingerichtet sind. +
