update table description

--- a/docs/de-de/modules/crm/pages/emailbuilder.adoc
+++ b/docs/de-de/modules/crm/pages/emailbuilder.adoc
@@ -64,35 +64,36 @@ E-Mail-Server-Zugangsdaten speichern:
 |Einstellung |Erläuterung
 
 | *Testmodus*
-| *Aktiv* oder *Inaktiv* wählen. +
-*Aktiv* = Der Testmodus ist aktiviert. Alle E-Mails werden nur an die eingegebene E-Mail-Adresse gesendet. So kann vor dem Live-Betrieb die korrekte Funktionsweise geprüft werden. +
+| Wähle *Aktiv* oder *Inaktiv*. +
+*Aktiv* = Der Testmodus ist aktiviert. Alle E-Mails werden nur an die eingegebene E-Mail-Adresse gesendet. So kannst du vor dem Live-Betrieb die korrekte Funktionsweise prüfen. +
 *Inaktiv* = Der Live-Modus ist aktiviert. +
 *_Wichtig:_* Der Testmodus gilt nur für diesen Webshop. Die Einstellungen für weitere Mandanten werden im Menü des Mandanten (Shops) konfiguriert.
 
 | *Name des Absenders*
-|Eigenen Namen oder Namen des Webshops eingeben. Der Name wird den Empfänger:innen angezeigt. Für die korrekte Darstellung die Verwendung von Sonderzeichen vermeiden.
+|Gib deinen eigenen Namen oder den Namen deines Webshops ein. Der Name wird den Empfänger:innen angezeigt. +
+*_Hinweis:_* Damit der Name korrekt dargestellt wird, vermeide die Verwendung von Sonderzeichen.
 
 | *E-Mail-Adresse*
-|E-Mail-Adresse eingeben, wie sie auch im E-Mail-Programm steht.
+|Gib die E-Mail-Adresse ein, wie sie auch im E-Mail-Programm steht.
 
 | *Postausgangsserver/SMTP-Server*
-|Postausgangsserver wie vom Provider angegeben eingeben (meist smtp.domain.de oder mail.domain.de). +
-*_mailbox.org:_* Für Postfächer bei mailbox.org den Postausgangsserver *smtp.mailbox.org* eingeben und Verschlüsselung *SSL* wählen.
+|Gib den Postausgangsserver wie vom Provider angegeben ein (meist smtp.domain.de oder mail.domain.de). +
+*_mailbox.org:_* Gib für Postfächer bei mailbox.org den Postausgangsserver *smtp.mailbox.org* ein und wähle die Verschlüsselung *SSL*.
 
 | *Benutzername*
-|Benutzer:innenname zu der E-Mail-Adresse eingeben. +
+|Gib den Benutzer:innenname zu der E-Mail-Adresse ein. +
 *_mailbox.org:_* Der mailbox.org-Benutzer:innenname ist die vollständige E-Mail-Adresse des mailbox.org-Postfachs.
 
 | *Passwort*
-|Passwort zu dem Benutzer:innenname und der E-Mail-Adresse eingeben.
+|Gib das Passwort zu dem Benutzer:innenname und der E-Mail-Adresse ein.
 
 | *Port (Standardport: 25)*
-|Wert *25* eingeben. Dieser Wert ist für fast alle Provider korrekt. Ggf. den korrekten Port beim Provider erfragen. +
-*_mailbox.org:_* Für Postfächer bei mailbox.org den Port *465* eingeben und als Verschlüsselung *SSL* wählen.
+|Gib den Wert *25* ein. Dieser Wert ist für fast alle Provider korrekt. Erfrage ggf. den korrekten Port beim Provider. +
+*_mailbox.org:_* Gib für Postfächer bei mailbox.org den Port *465* ein und wähle die Verschlüsselung *SSL*.
 
 | *Verschlüsselung*
-| *SSL*, *TLS* oder *keine Verschlüsselung* wählen.  +
-*_mailbox.org:_* Für Postfächer bei mailbox.org den Port *465* eingeben und als Verschlüsselung *SSL* wählen.
+| Wähle *SSL*, *TLS* oder *keine Verschlüsselung*.  +
+*_mailbox.org:_* Gib für Postfächer bei mailbox.org den Port *465* ein und wähle die Verschlüsselung *SSL*.
 
 |====
 
