--- a/docs/de-de/modules/crm/pages/schnellsuche.adoc
+++ b/docs/de-de/modules/crm/pages/schnellsuche.adoc
@@ -82,7 +82,8 @@ Datensätze über die Schnellsuche finden:
 |Gib den Straßennamen und/oder die Hausnummer ein. Es ist möglich, nur nach Teilen des Straßennamens und Teilen der Hausnummer zu suchen.
 
 | *PLZ*
-|Gib die Postleitzahl, die im Kontakt gespeichert ist, ein. Es wird auch nach Postleitzahlen, die in den Adressdatensätzen des Kontakts gespeichert sind, gesucht. Es ist möglich, nur nach Teilen der Postleitzahl zu suchen.
+|Gib die Postleitzahl ein. +
+*_Hinweis:_* Es wird auch nach Postleitzahlen, die in den Adressdatensätzen des Kontakts gespeichert sind, gesucht. Es ist möglich, nur nach Teilen der Postleitzahl zu suchen. Du musst mindestens 3 Ziffern eingeben.
 
 | *Ort*
 |Ort, der im Kontakt gespeichert ist, eingeben. Es wird auch nach Orten, die in den Adressdatensätzen des Kontakts gespeichert sind, gesucht. Es ist möglich, nur nach Teilen des Ortsnamens zu suchen.
