Update schnellsuche.adoc (#181)
* Update schnellsuche.adoc

* Update schnellsuche.adoc

--- a/docs/de-de/modules/crm/pages/schnellsuche.adoc
+++ b/docs/de-de/modules/crm/pages/schnellsuche.adoc
@@ -22,7 +22,6 @@ Weitere Informationen zum Umwandeln von plentyShop-Gastbestellungen in reguläre
 
 include::_includes:page$rechte.adoc[]
 
-
 Weitere Informationen zu den Rechten für das Menü *CRM » Kontakte* für Backend-Benutzer:innen findest du auf der Handbuchseite xref:crm:kontakte-verwalten.adoc#50[Kontakte].
 
 [#datensaetze-finden]
@@ -68,61 +67,61 @@ Datensätze über die Schnellsuche finden:
 |Mit einem Klick auf icon:undo[role="orange"] werden die eingestellten Filterkriterien zurückgesetzt.
 
 | *ID*
-|Jeder Kontakt erhält automatisch eine fortlaufende und einzigartige ID. Dies ist unabhängig davon, ob der Kontakt manuell oder automatisch erstellt wurde. 2 Kontakte haben somit nie die gleiche ID. Die ID entspricht immer einer echten Zahl. Ungültig sind z.B. 00521 oder ADF8354. +
+|Jeder Kontakt erhält automatisch eine fortlaufende und einzigartige ID. Dies ist unabhängig davon, ob der Kontakt manuell oder automatisch erstellt wurde. 2 Kontakte haben somit nie die selbe ID. Die ID entspricht immer einer echten Zahl. Ungültig sind daher z.B. 00521 oder ABC8354. +
 *_Hinweis:_* Mit einem Klick auf die Pfeile (icon:sort[]) neben der ID in der Übersicht kannst du die gefundenen Datensätze aufsteigend oder absteigend nach ihrer ID anzeigen.
 
 | *Name*
-|Vorname und/oder Nachname oder Firmenname eingeben, um den oder die Kontakte mit diesem Namen anzuzeigen. +
+|Gib den Vornamen und/oder Nachnamen oder den Firmennamen ein, um den oder die Kontakte mit diesem Namen anzuzeigen. +
 *_Hinweis:_* Mit einem Klick auf die Pfeile (icon:sort[]) in den Spalten *Vorname* und *Nachname* in der Übersicht kannst du die gefundenen Datensätze alphabetisch sortiert anzeigen.
 
 | *Kontaktdaten*
-|In diesem Feld kann nach dem Namen, der Adresse, der Firma, der Kundennummer und dem eBay-Namen gesucht werden. +
-*_Hinweis:_* Um nach dem eBay-Namen zu suchen, zuerst den Parameter *ebay:* gefolgt vom gesuchten eBay-Namen eingeben.
+|In diesem Feld kanst du nach dem Namen, der Adresse, der Firma, der Kundennummer und dem eBay-Namen suchen. +
+*_Hinweis:_* Um nach dem eBay-Namen zu suchen, gib zuerst den Parameter `ebay:` gefolgt vom gesuchten eBay-Namen ein.
 
 | *Anschrift*
-|Straßenname und/oder Hausnummer eingeben, der im Kontakt gespeichert ist. Es ist möglich, nur nach Teilen des Straßennamens und Teilen der Hausnummer zu suchen.
+|Gib den Straßennamen und/oder die Hausnummer ein. Es ist möglich, nur nach Teilen des Straßennamens und Teilen der Hausnummer zu suchen.
 
 | *PLZ*
-|Postleitzahl, die im Kontakt gespeichert sind, eingeben. Es wird auch nach Postleitzahlen, die in den Adressdatensätzen des Kontakts gespeichert sind, gesucht. Es ist möglich, nur nach Teilen der Postleitzahl zu suchen.
+|Gib die Postleitzahl ein. +
+*_Hinweis:_* Es wird auch nach Postleitzahlen, die in den Adressdatensätzen des Kontakts gespeichert sind, gesucht. Es ist möglich, nur nach Teilen der Postleitzahl zu suchen. Du musst mindestens 3 Ziffern eingeben.
 
 | *Ort*
 |Ort, der im Kontakt gespeichert ist, eingeben. Es wird auch nach Orten, die in den Adressdatensätzen des Kontakts gespeichert sind, gesucht. Es ist möglich, nur nach Teilen des Ortsnamens zu suchen.
 
 | *E-Mail*
-|Komplette E-Mail-Adresse eingeben, um den Kontakt mit dieser E-Mail-Adresse anzuzeigen.
+|Gib die komplette E-Mail-Adresse ein, um den Kontakt mit dieser E-Mail-Adresse anzuzeigen.
 
 | *Telefon*
-|Telefonnummer eingeben, um nur den Kontakt mit dieser Telefonnummer anzuzeigen. Es kann auch nach Teilen der Telefonnummer gesucht werden. Mindestens 3 Ziffern eingeben.
+|Gib die Telefonnummer ein, um nur den Kontakt mit dieser Telefonnummer anzuzeigen. Es kann auch nach Teilen der Telefonnummer gesucht werden. Du musst mindestens 3 Ziffern eingeben.
 
 | *Tags*
-|Einen oder mehrere Tags wählen, um nur Kontakte mit diesen Tags anzuzeigen.
+|Wähle ein Tag, um nur Kontakte mit diesem Tag anzuzeigen.
 
 | *Land*
-|Land wählen, um nur Kontakte aus diesem Land anzuzeigen. Das Land ist in den Kontaktdaten gespeichert. +
-Die Einstellung *Alle außer Deutschland* wählen, um nur Kontakte aus allen Ländern außer Deutschland anzuzeigen.
+|Wähle das Land, um nur Kontakte aus diesem Land anzuzeigen. Das Land ist in den Kontaktdaten gespeichert. +
+Wähle die Einstellung *Alle außer Deutschland*, um nur Kontakte aus allen Ländern außer Deutschland anzuzeigen.
 
 | *Eigner*
-|Eigner wählen, um nur Kontakte anzuzeigen, die mit diesem Eigner verknüpft sind. Der Eigner muss in den Kontaktdaten gespeichert sein. +
+|Wähle den Eigner, um nur Kontakte anzuzeigen, die mit diesem Eigner verknüpft sind. Der Eigner muss in den Kontaktdaten gespeichert sein. +
 *_Wichtig:_* In der Dropdown-Liste werden nur Benutzer:innen angezeigt, bei denen im Konto im Tab *Eigner* die Option *Kunde* aktiviert ist.
 
 | *Typ*
-|Typ wählen, um nur Kontakte mit diesem Typ anzuzeigen.
+|Wähle den Typ, um nur Kontakte mit diesem Typ anzuzeigen.
 
 | *Kundenklasse*
-|Kundenklasse wählen, um nur Kontakte mit dieser Kundenklasse anzuzeigen.
+|Wähle die Kundenklasse, um nur Kontakte mit dieser Kundenklasse anzuzeigen.
 
 | *Bewertung*
-|Bewertung wählen, um nur Kontakte mit dieser Bewertung anzuzeigen. 5 gelbe Sterne stehen für die beste und 5 rote Sterne für die schlechteste Bewertung.
+|Wähle die Bewertung, um nur Kontakte mit dieser Bewertung anzuzeigen. 5 gelbe Sterne stehen für die beste und 5 rote Sterne für die schlechteste Bewertung.
 
 | *Mandant*
-|Mandant wählen, um nur Kontakte dieses Mandanten anzuzeigen. Der Mandant ist in den Kontaktdaten gespeichert. +
+|Wähle den Mandanten, um nur Kontakte dieses Mandanten anzuzeigen. Der Mandant ist in den Kontaktdaten gespeichert. +
 *_Wichtig:_* Backend-Benutzer:innen stehen nur Mandanten zur Auswahl, für die sie eine Berechtigung haben. Berechtigungen werden im Menü *Einrichtung » Einstellungen » Benutzer » Konten* im Tab xref:business-entscheidungen:benutzerkonten-zugaenge.adoc#90[Berechtigungen] des Benutzer:innenkontos eingestellt.
 
 |====
 
 [TIP]
 Sobald du im Menü *CRM » Schnellsuche* einen Datensatz öffnest, startet eine Stoppuhr automatisch oben rechts in der Ecke. Mit einem Klick auf *Pause* (icon:pause-circle-o[]) hältst du die Uhr an. Mit einem weiteren Klick auf *Start* (icon:play-circle[]) läuft die Zeit weiter. Klicke auf *Zurücksetzen* (icon:undo[role="orange"]), um die Zeit auf 0 zu setzen.
-
 
 [#weitere-einstellungen]
 == Weitere Einstellungsmöglichkeiten
@@ -179,8 +178,6 @@ Wenn du einen Datensatz in der Schnellsuche öffnest, siehst du in der ersten Ze
 |icon:plus-square[role="green"]
 |Erstellt ein neues Ticket im Menü *CRM » Ticketsystem*. +
 *_Hinweis:_* Wenn es sich bei dem Datensatz um eine Gastbestellung handelt, ist dieses Feld ausgegraut.
-
-
 
 | *Alle Daten dieses Kontakts herunterladen*
 |icon:download[role="purple"]
