--- a/docs/en-gb/modules/markets/pages/bol-com.adoc
+++ b/docs/en-gb/modules/markets/pages/bol-com.adoc
@@ -514,8 +514,8 @@ include::_includes:page$EA.adoc[]
 |Setting |Option |Selection
 
 | *Event*
-| *Status change: [8.1] Cancelled by customer*
-|
+| *Order change: Status change*
+| *[8.1] Cancelled by customer*
 
 | *Filter 1*
 | *Order > Order type*
@@ -594,8 +594,8 @@ include::_includes:page$EA.adoc[]
 |Setting |Option |Selection
 
 | *Event*
-| *Status change: [9.5] Credit note created*
-|
+| *Order change: Status change*
+| *[9.5] Credit note created*
 
 | *Filter 1*
 | *Order > Order type*
