--- a/docs/en-gb/modules/markets/pages/cdiscount.adoc
+++ b/docs/en-gb/modules/markets/pages/cdiscount.adoc
@@ -503,9 +503,9 @@ include::_includes:page$EA.adoc[]
 |Setting |Option |Selection
 
 | *Event*
-| *Order change > Outgoing items booked* +
+| *Order change: Status change* +
 _or_ *Order change: Outgoing items booked*
-|
+| *[7] Outgoing items booked*
 
 | *Filter 1*
 | *Order > Order type*
