--- a/docs/en-gb/modules/markets/pages/ebay-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/ebay-setup.adoc
@@ -613,8 +613,8 @@ include::_includes:page$EA.adoc[]
 |Setting |Option |Selection
 
 | *Event*
-| *Order change: Status change > Outgoing items booked*
-|
+| *Order change: Status change*
+| *[7] Outgoing items booked*
 
 | *Filter 1*
 | *Order > Referrer*
@@ -2167,8 +2167,8 @@ include::_includes:page$EA.adoc[]
 |Setting |Option |Selection
 
 | *Event*
-| *Order change: Status change > eBay: Accept return, with own label*
-|
+| *Order change: Status change*
+| *eBay: Accept return, with own label*
 
 | *Filter 1*
 | *Order > Order type*
@@ -2368,8 +2368,8 @@ include::_includes:page$EA.adoc[]
 |Setting |Option |Selection
 
 | *Event*
-| *Order change: Status change > Issue eBay refund (PayPal)*
-|
+| *Order change: Status change*
+| *Issue eBay refund (PayPal)*
 
 | *Filter 1*
 | *Order > Order type*
@@ -2407,8 +2407,8 @@ include::_includes:page$EA.adoc[]
 |Setting |Option |Selection
 
 | *Event*
-| *Order change: Status change > eBay: Mark refund as sent (non-PayPal)*
-|
+| *Order change: Status change*
+| *eBay: Mark refund as sent (non-PayPal)*
 
 | *Filter 1*
 | *Order > Order type*
