--- a/docs/en-gb/modules/markets/pages/idealo-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/idealo-setup.adoc
@@ -1064,8 +1064,8 @@ include::_includes:page$EA.adoc[]
 |Setting |Option |Selection
 
 | *Event*
-| Select an event, for example *Status change: [8] Cancelled*
-|
+| Select an event, for example *Order change: Status change*
+| *[8] Cancelled*
 
 | *Filter 1*
 | *Order > Order type*
@@ -1094,8 +1094,8 @@ include::_includes:page$EA.adoc[]
 |Setting |Option |Selection
 
 | *Event*
-| Select an event, for example *Status change: [8.1] Cancelled by customer*
-|
+| Select an event, for example *Order change: Status change*
+| *[8.1] Cancelled by customer*
 
 | *Filter 1*
 | *Order > Order type*
@@ -1124,8 +1124,8 @@ include::_includes:page$EA.adoc[]
 |Setting |Option |Selection
 
 | *Event*
-| Select an event, for example *Status change*. Select the status that you xref:markets:idealo-setup.adoc#intable-status-cancellation-by-buyer[set in the assistant] for orders that customers want to cancel.
-|
+| Select an event, for example *Order change: Status change*.
+| Select the status that you xref:markets:idealo-setup.adoc#intable-status-cancellation-by-buyer[set in the assistant] for orders that customers want to cancel.
 
 | *Filter 1*
 | *Order > Order type*
