--- a/docs/en-gb/modules/markets/pages/otto-market.adoc
+++ b/docs/en-gb/modules/markets/pages/otto-market.adoc
@@ -616,9 +616,9 @@ include::_includes:page$EA.adoc[]
 |Setting |Option |Selection
 
 | *Event*
-| Select an event, for example *Status change: [5] Cleared for shipping* +
+| Select an event, for example *Order change: Status change* +
 *_Note:_* Select an event before the shipping confirmation. The event *New order* is _not_ recommended.
-|
+| *[5] Cleared for shipping*
 
 | *Filter 1*
 | *Order > Order type*
@@ -648,9 +648,9 @@ include::_includes:page$EA.adoc[]
 |Setting |Option |Selection
 
 | *Event*
-| Select an event, for example *Status change: [5] Cleared for shipping* +
+| Select an event, for example *Order change: Status change* +
 *_Note:_* Select an event before the shipping confirmation. The event *New order* is _not_ recommended.
-|
+| *[5] Cleared for shipping*
 
 | *Filter 1*
 | *Order > Order type*
@@ -693,9 +693,9 @@ include::_includes:page$EA.adoc[]
 |Setting |Option |Selection
 
 | *Event*
-| *Status change*
-| Select an event, for example *[7] Shipped*. +
-*_Note:_* If no return label has been created, the shipping confirmation cannot be sent to OTTO Market. As such, select an event that is triggered after the event procedure *Generate return label*.
+| *Order change: Status change* +
+*_Note:_* If no return label has been created, the shipping confirmation cannot be sent to OTTO Market. As such, select an event that is triggered after the event procedure *Generate return label*
+| Select a status, for example *[7] Shipped*.
 
 | *Filter 1*
 | *Order > Order type*
@@ -768,9 +768,8 @@ include::_includes:page$EA.adoc[]
 |Setting |Option |Selection
 
 | *Event*
-| Select an event, for example *Order change: Status change*. +
-*_Note:_* Select a status that suits your workflow. For example, you could create a status *[9.11] Send return to OTTO*.
-|
+| Select an event, for example *Order change: Status change*.
+| *_Note:_* Select a status that suits your workflow. For example, you could create a status *[9.11] Send return to OTTO*.
 
 | *Filter 1*
 | *Order > Order type*
@@ -804,9 +803,8 @@ include::_includes:page$EA.adoc[]
 |Setting |Option |Selection
 
 | *Event*
-| Select an event, for example *Order change: Status change*. +
-*_Note:_* Select a status that suits your workflow. For example, you can create the status *[9.12] Reject OTTO return*.
-|
+| Select an event, for example *Order change: Status change*.
+| *_Note:_* Select a status that suits your workflow. For example, you can create the status *[9.12] Reject OTTO return*.
 
 | *Filter 1*
 | *Order > Order type*
