--- a/docs/en-gb/modules/markets/partials/mirakl-conrad.adoc
+++ b/docs/en-gb/modules/markets/partials/mirakl-conrad.adoc
@@ -23,8 +23,8 @@ include::_includes:page$EA.adoc[]
 | *Selection*
 
 | *Event*
-| *Status change*
-| Select an event, for example [3] *Waiting for payment*.
+| *Order change: Status change*
+| Select a status, for example *[3] Waiting for payment*.
 
 | *Filter*
 | *Order > Referrer*
@@ -51,8 +51,8 @@ include::_includes:page$EA.adoc[]
 | *Selection*
 
 | *Event*
-| *Status change*
-| Select an event, e.g. *[8] Cancelled*.
+| *Order change: Status change*
+| Select a status, for example *[8] Cancelled*.
 
 | *Filter*
 | *Order > Referrer*
@@ -79,8 +79,8 @@ include::_includes:page$EA.adoc[]
 | *Selection*
 
 | *Event*
-| *Status change*
-| Select an event, for example [7] *Outgoing items booked*.
+| *Order change: Status change*
+| Select a status, for example *[7] Outgoing items booked*.
 
 | *Filter*
 | *Order > Referrer*
@@ -111,8 +111,8 @@ include::_includes:page$EA.adoc[]
 | *Selection*
 
 | *Event*
-| *Status change*
-| Select an event, e.g. *[8] Cancelled*.
+| *Order change: Status change*
+| Select a status, for example *[8] Cancelled*.
 
 | *Filter*
 | *Order > Referrer*
@@ -139,8 +139,8 @@ include::_includes:page$EA.adoc[]
 | *Selection*
 
 | *Event*
-| *Status change*
-| Select an event, e.g. *[11] Credit note*.
+| *Order change: Status change*
+| Select a status, for example *[11] Credit note*.
 
 | *Filter*
 | *Order > Referrer*
