--- a/docs/en-gb/modules/markets/pages/amazon-fba.adoc
+++ b/docs/en-gb/modules/markets/pages/amazon-fba.adoc
@@ -485,8 +485,8 @@ include::_includes:page$EA.adoc[]
 | Setting | Option | Selection
 
 | *Event*
-| *Order change: Status change > [5] Cleared for shipping*
-|
+| *Order change: Status change*
+| *[5] Cleared for shipping*
 
 | *Filter 1*
 | *Order > Order warehouse*
