--- a/docs/en-gb/modules/markets/pages/best-practices-kaufland-uploading-invoices.adoc
+++ b/docs/en-gb/modules/markets/pages/best-practices-kaufland-uploading-invoices.adoc
@@ -88,8 +88,8 @@ The status and filters listed in <<#creating-invoices-kaufland>> only serve as a
 |Setting |Option |Selection
 
 | *Event*
-| *Status change: [7] Outgoing items booked*
-|
+| *Order change: Status change*
+| *[7] Outgoing items booked*
 
 | *Filter 1*
 | *Order > Order type*
