--- a/docs/en-gb/modules/markets/pages/fruugo.adoc
+++ b/docs/en-gb/modules/markets/pages/fruugo.adoc
@@ -234,8 +234,8 @@ include::_includes:page$EA.adoc[]
 | Setting | Option | Selection
 
 | *Event*
-| *Status change: [8] Cancelled*
-|
+| *Order change: Status change*
+| *[8] Cancelled*
 
 | *Filter 1*
 | *Order > Order type*
