--- a/docs/en-gb/modules/markets/pages/kaufland-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/kaufland-setup.adoc
@@ -482,12 +482,13 @@ include::_includes:page$EA.adoc[]
 | *Event*
 | Select an event, for example:
 
-* *Status change > [Select a status, for example [7] Shipped]*
+* *Order change: Status change*
 
 _or_
 
 * *Order change > Package number*
-|
+| Select a status, for example *[7] Shipped]*.
+
 | *Filter 1*
 | *Order > Order type*
 | *Order*
@@ -528,8 +529,8 @@ The status and filters listed in <<#creating-invoices-kaufland>> only serve as a
 |Setting |Option |Selection
 
 | *Event*
-| *Status change: [7] Outgoing items booked*
-|
+| *Order change: Status change*
+| *[7] Outgoing items booked*
 
 | *Filter 1*
 | *Order > Order type*
@@ -612,8 +613,8 @@ include::_includes:page$EA.adoc[]
 |Setting |Option |Selection
 
 | *Event*
-| *Status change: Status [8] Cancelled*
-|
+| *Order change: Status change*
+| *[8] Cancelled*
 
 | *Filter 1*
 | *Order > Order type*
@@ -646,14 +647,15 @@ include::_includes:page$EA.adoc[]
 |Setting |Option |Selection
 
 | *Event*
-| Select an event, for example:
+| Select an event, for example *Order change: Status change*
+| Select a status, for example:
 
-* *Status change > [4] In preparation for shipping*
+* *[4] In preparation for shipping*
 
 _or_
 
-* *Status change > [5] Cleared for shipping* +
-|
+* *[5] Cleared for shipping*
+
 | *Filter 1*
 | *Order > Order type*
 | *Order*
