--- a/docs/en-gb/modules/markets/pages/limango.adoc
+++ b/docs/en-gb/modules/markets/pages/limango.adoc
@@ -697,8 +697,8 @@ include::_includes:page$EA.adoc[]
 | *Selection*
 
 | *Event*
-| *Status change*
-| Select an event, for example [8] *Waiting for payment*.
+| *Order change: Status change*
+| Select a status, for example *[8] Waiting for payment*.
 
 | *Filter*
 | *Order > Referrer*
@@ -766,7 +766,7 @@ include::_includes:page$EA.adoc[]
 |Setting |Option |Selection
 
 | *Event*
-| *Order change > Package number*
+| *Order change: Package number*
 |
 
 | *Filter 1*
@@ -796,7 +796,7 @@ include::_includes:page$EA.adoc[]
 |Setting |Option |Selection
 
 | *Event*
-| *Status change*
+| *Order change: Status change*
 | Select the status for *Order status for orders with shipping carrier mapping (> 5 - < 7)* +
 Go to *Plugins » Plugin set overview » [Open plugin set] » Open limango plugin » Order status* to set this status.
 
