--- a/docs/en-gb/modules/markets/pages/mytoys.adoc
+++ b/docs/en-gb/modules/markets/pages/mytoys.adoc
@@ -735,8 +735,8 @@ include::_includes:page$EA.adoc[]
 | *Selection*
 
 | *Event*
-| *Status change*
-| Select an event, for example [8] *Waiting for payment*.
+| *Order change: Status change*
+| Select a status, for example *[8] Waiting for payment*.
 
 | *Filter*
 | *Order > Referrer*
@@ -763,8 +763,8 @@ include::_includes:page$EA.adoc[]
 |Setting |Option |Selection
 
 | *Event*
-| *Status change*
-| Select an event, for example [7] *Outgoing items booked*.
+| *Order change: Status change*
+| Select a status, for example *[7] Outgoing items booked*.
 
 | *Filter 1*
 | *Order > Order type*
