--- a/docs/en-gb/modules/markets/pages/shopgate.adoc
+++ b/docs/en-gb/modules/markets/pages/shopgate.adoc
@@ -292,8 +292,8 @@ include::_includes:page$EA.adoc[]
 |Setting |Option |Selection
 
 | *Event*
-| *Order change: Status change > Cancelled*
-|
+| *Order change: Status change*
+| *[8] Cancelled*
 
 | *Filter 1*
 | *Order > Order type*
