--- a/docs/en-gb/modules/markets/partials/mirakl-EP-order-rejection.adoc
+++ b/docs/en-gb/modules/markets/partials/mirakl-EP-order-rejection.adoc
@@ -13,8 +13,8 @@ include::_includes:page$EA.adoc[]
 | *Selection*
 
 | *Event*
-| *Status change*
-| Select an event, for example [8] *Waiting for payment*.
+| *Order change: Status change*
+| Select a status, for example *[8] Waiting for payment*.
 
 | *Filter*
 | *Order > Referrer*
