--- a/docs/en-gb/modules/markets/partials/mirakl-EP-send-invoice.adoc
+++ b/docs/en-gb/modules/markets/partials/mirakl-EP-send-invoice.adoc
@@ -13,8 +13,8 @@ include::_includes:page$EA.adoc[]
 | *Selection*
 
 | *Event*
-| *Status change*
-| Select an event, e.g. *[7.1] Order exported*.
+| *Order change: Status change*
+| Select a status, for example *[7.1] Order exported*.
 
 | *Filter*
 | *Order > Referrer*
