--- a/docs/en-gb/modules/markets/partials/mirakl-EP-shipping-confirmation.adoc
+++ b/docs/en-gb/modules/markets/partials/mirakl-EP-shipping-confirmation.adoc
@@ -13,8 +13,8 @@ include::_includes:page$EA.adoc[]
 | *Selection*
 
 | *Event*
-| *Status change*
-| Select an event, for example [7] *Outgoing items booked*.
+| *Order change: Status change*
+| Select a status, for example *[7] Outgoing items booked*.
 
 | *Filter*
 | *Order > Referrer*
