--- a/docs/en-gb/modules/markets/partials/mirakl-voelkner.adoc
+++ b/docs/en-gb/modules/markets/partials/mirakl-voelkner.adoc
@@ -21,8 +21,8 @@ include::_includes:page$EA.adoc[]
 | *Selection*
 
 | *Event*
-| *Status change*
-| Select an event, for example [7.1] *Order exported*.
+| *Order change: Status change*
+| Select a status, for example *[7.1] Order exported*.
 
 | *Filter*
 | *Order > Referrer*
@@ -53,8 +53,8 @@ include::_includes:page$EA.adoc[]
 | *Selection*
 
 | *Event*
-| *Status change*
-| Select an event, e.g. *[11] Credit note*.
+| *Order change: Status change*
+| Select a status, for example *[11] Credit note*.
 
 | *Filter*
 | *Order > Referrer*
@@ -81,8 +81,8 @@ include::_includes:page$EA.adoc[]
 | *Selection*
 
 | *Event*
-| *Status change*
-| Select an event, for example [7] *Outgoing items booked*.
+| *Order change: Status change*
+| Select a status, for example *[7] Outgoing items booked*.
 
 | *Filter*
 | *Order > Referrer*
