--- a/docs/de-de/modules/maerkte/partials/otto-faq.adoc
+++ b/docs/de-de/modules/maerkte/partials/otto-faq.adoc
@@ -1,5 +1,5 @@
 In diesem Kapitel findest du Antworten auf häufig gestellte Fragen.
-(Stand: 29.03.2022)
+Die Informationen wurden zuletzt am 29.03.2022 aktualisiert.
 
 [#13013]
 === FAQ: Allgemeine Fragen und Antworten
