--- a/docs/en-gb/modules/markets/partials/otto-faq.adoc
+++ b/docs/en-gb/modules/markets/partials/otto-faq.adoc
@@ -1,5 +1,5 @@
 This chapter contains answers to frequently asked questions.
-The information was last updated on 29/03/2022.
+The information was last updated on 29/03/2022\.
 
 [#13013]
 === FAQ: General questions and answers
@@ -371,9 +371,9 @@ We have listed possible error messages in relation to the item export below.
 --
 Check the delivery time mapped in the catalogue in the field *Delivery time in days* and the variation. In most cases, you can map the availability of your variation:
 
-You can find a translation of the individual availability levels in the *Setup » Item » Availability* menu.
-
 image::markets:otto-faq-5.png[]
+
+You can find a translation of the individual availability levels in the *Setup » Item » Availability* menu.
 --
 
 [#13010]
@@ -385,7 +385,7 @@ This error indicates that the shipping method is not linked. The shipping method
 * via a shipping profile
 * via property
 
-Make sure that the data field saved in the catalogue is linked to the item. For the shipping profile, activate the shipping profile in the item’s *Global* tab. For the property, activate the property for the desired variation.
+Make sure that the data field saved in the catalogue is linked to the item. For the shipping profile, activate the shipping profile in the item’s tab *Global*. For the property, activate the property for the desired variation.
 --
 
 
@@ -426,11 +426,11 @@ This error refers to the VAT rate.
 
 * The VAT rate must be saved for the variation (*Item/Settings in the Costs area*).
 
-image::markets:otto-faq-5.png[]
+image::markets:otto-faq-6.png[]
 
 * The VAT rate must be mapped correctly in the catalogue. For example, the Otto value (under *VAT*) and the mapping to the VAT rate of the item must not be missing.
 
-image::markets:otto-faq-6.png[]
+image::markets:otto-faq-7.png[]
 --
 
 [#1308]
@@ -441,7 +441,7 @@ This error indicates that the variation’s brand that should be exported has no
 
 The brand can be linked to the variation in two different ways:
 
-* By mapping the Manufacturer that is saved in the *Global* tab of an item
+* By mapping the Manufacturer that is saved in the tab *Global* of an item
 *_Tip:_* If you want to map the manufacturer, the catalogue mapping should be *Add data field » Manufacturer » [Select manufacturer]*.
 * By creating a property
 
@@ -473,7 +473,7 @@ In the catalogue, check the mappings for the data fields *Parent-SKU* and *SKU*.
 The variation does not have positive net stock in the warehouse that is mapped in the catalogue. If *no* warehouse is mapped in the catalogue, the sum of all sales warehouses is exported.
 Alternatively, you can map the *virtual warehouse*.
 
-Find more information on the catalogue mappings for the marketplace data field *Stock* <<markets/otto/otto-market#905, here>>
+Find more information on the catalogue mappings for the marketplace data field *Stock* xref:markets:otto-market.adoc#905[here]
 [/details]
 --
 
@@ -653,7 +653,7 @@ To send a new shipping confirmation, the event procedure with the procedure *Sen
 
 These errors indicate that you changed an OTTO item attribute. However, OTTO does not accept the change and it is not possible the change the attribute for this item. The indicated attribute can relate to a variation attribute or a title attribute. Other OTTO attributes are important here, too.
 
-TIP: An item _cannot_ be deleted on OTTO Market, neither by plentymarkets nor by OTTO. It is only possible to mark the item as *not available* at OTTO Market. Therefore, you should always make sure that the correct data fields are mapped in the catalogue prior to transferring your items.
+TIP: An item _cannot_ be deleted at OTTO Market, neither by plentymarkets nor by OTTO. It is only possible to mark the item as *not available* at OTTO Market. Therefore, you should always make sure that the correct data fields are mapped in the catalogue prior to transferring your items.
 
 --
 
