--- a/docs/en-gb/modules/markets/partials/otto-faq.adoc
+++ b/docs/en-gb/modules/markets/partials/otto-faq.adoc
@@ -1,5 +1,5 @@
 This chapter contains answers to frequently asked questions.
-The information was last updated on 29/03/2022\.
+The information was last updated on 29/03/2022.
 
 [#13013]
 === FAQ: General questions and answers
