--- a/docs/de-de/modules/crm/pages/ticketsystem-nutzen.adoc
+++ b/docs/de-de/modules/crm/pages/ticketsystem-nutzen.adoc
@@ -514,16 +514,15 @@ Tickets aus Formularen erstellen:
 . Wähle (icon:check-square[role="blue"]), welche deiner Kontaktdaten im Formular angezeigt werden sollen. +
 *_Hinweis:_* Die hier gewählten Daten werden aus dem Menü *Einrichtung » Einstellungen » Stammdaten* übernommen.
 . Entscheide, ob du im Formular eine Checkbox anzeigen lassen möchtest, mit der die Datenschutzerklärung akzeptiert werden kann.
-. *Speichere* (icon:save) die Einstellungen. +
+. *Speichere* (icon:save[]) die Einstellungen. +
 → Jedes Mal, wenn ein:e Besucher:in ein Formular in deinem plentyShop ausgefüllt und abgeschickt wird, wird ein Ticket in deinem plentyShop erstellt.
 
-//// 
+
 [IMPORTANT]
 .Zuordnung ausschließlich anhand von E-Mail-Adressen
 ====
-Kontaktformulare werden ausschließlich anhand der E-Mail-Adresse der Kund:innen zugeordnet. Eine E-Mail-Adresse in Kontaktformularen muss vom Typ *Textfeld E-Mail-Adresse* sein, ansonsten erkennt dein plentymarkets System nicht, dass es sich bei der Information um die E-Mail-Adresse handelt. E-Mail-Adressen, die in anderen Feldern, z.B. Nachricht oder Sonstiges eingegeben werden, werden _nicht_ für die Zuordnung berücksichtigt und werden auch _nicht_ für eine Antwort verwendet.
+Kontaktformulare werden ausschließlich anhand der E-Mail-Adresse der Kund:innen zugeordnet. Eine E-Mail-Adresse in Kontaktformularen muss vom im dafür vorgesehenen Feld *E-Mail* eingegeben sein, ansonsten erkennt dein plentymarkets System nicht, dass es sich bei der Information um die E-Mail-Adresse handelt. E-Mail-Adressen, die in anderen Feldern, z.B. Nachricht oder Sonstiges eingegeben werden, werden _nicht_ für die Zuordnung berücksichtigt und werden auch _nicht_ für eine Antwort verwendet.
 ====
-////
 
 Wenn die E-Mail-Adresse einem bestehenden Kontakt zugeordnet werden kann, wird dieser Kontakt im Ticket angezeigt. Wenn die E-Mail-Adresse keinem bestehenden Kontakt zugeordnet werden kann, siehst du die E-Mail-Adresse des Absenders _nicht_ im Ticketsystem. Wird nun eine Nachricht im Ticketsystem verfasst, wird diese trotzdem an die Absenderadresse versendet.
 
