kaufland - EA - DE+EN

--- a/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
@@ -500,7 +500,7 @@ _oder_
 | *Kaufland.de*
 
 | *Aktion*
-| *Auftrag*
+| *Plugin*
 | *Versandbestätigung an Kaufland.de senden* +
 *_Hinweis:_* Aufträge, für die keine Versandbestätigung an {market} gesendet werden konnten, werden in den Status verschoben, den du für die Option *Auftragsstatus für Aufträge mit fehlgeschlagener Versandbestätigung* gewählt hast. Diese Option findest du im Menü *Einrichtung » Märkte » Kaufland.de » Einstellungen*. +
 <<#no-shipping-confirmation, So behandelst du Aufträge in diesem Status.>>
