kaufland EA - fix

--- a/docs/en-gb/modules/markets/pages/kaufland-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/kaufland-setup.adoc
@@ -482,12 +482,12 @@ include::_includes:page$EA.adoc[]
 | *Event*
 | Select an event, for example:
 
-* *Order change: Status change*
+* *Order change: Status change >* Select a status, for example *[7] Shipped]*
 
 _or_
 
 * *Order change > Package number*
-| Select a status, for example *[7] Shipped]*.
+|
 
 | *Filter 1*
 | *Order > Order type*
