CHANGE order of descriptions in table to reflect ui changes; FIX a few small improvements noticed

--- a/docs/en-gb/modules/item/pages/detail-view.adoc
+++ b/docs/en-gb/modules/item/pages/detail-view.adoc
@@ -19,7 +19,6 @@ zuletzt bearbeitet 01.03.2022
 -Link to directory of all data fields +
 ////
 
-Introducing the new item UI in plentymarkets!
 This page focuses on the item detail view and explains the basic concept of use.
 You’ll learn how to:
 
@@ -167,10 +166,8 @@ In case of unsaved changes, a dialogue is displayed.
 Which users or roles should be allowed to see the view?
 You can grant or limit access to every single view.
 
-[tabs]
-====
-Users::
-+
+[.collapseBox]
+.*Users*
 --
 
 . Click on *Edit view* (icon:design_inline_edit[set=plenty]).
@@ -185,8 +182,9 @@ Users::
 xref:business-decisions:user-accounts-access.adoc#112[Further information] about user accounts and access rights.
 
 --
-Roles::
-+
+
+[.collapseBox]
+.*Roles*
 --
 
 . Click on *Edit view* (icon:design_inline_edit[set=plenty]).
@@ -201,7 +199,6 @@ Roles::
 xref:business-decisions:user-accounts-access.adoc#116[Further information] about user accounts and access rights.
 
 --
-====
 
 [#1000]
 == Saving changes
